--- a/trunk/ddscanner/app/src/main/res/layout/fragment_dive_center_profile.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/fragment_dive_center_profile.xml
@@ -409,15 +409,11 @@
                 <Button
                     android:onClick="@{handlers::showDiveSpots}"
                     android:layout_width="match_parent"
-                    android:layout_height="45dp"
                     android:layout_marginBottom="20dp"
                     android:layout_marginLeft="20dp"
                     android:layout_marginRight="20dp"
-                    android:background="@drawable/dive_center_profile_dive_spots"
-                    android:fontFamily="sans-serif-medium"
                     android:textAllCaps="false"
-                    android:textColor="#e3e9fb"
-                    android:textSize="15sp"
+                    style="@style/BlueButton"
                     android:visibility="gone"
                     app:myDiveSpotsCount="@{diveCenterViewModel}" />
             </LinearLayout>
