--- a/trunk/ddscanner/app/src/main/res/values/styles.xml
+++ b/trunk/ddscanner/app/src/main/res/values/styles.xml
@@ -216,7 +216,7 @@
         <item name="android:fontFamily">sans-serif-medium</item>
         <item name="android:layout_height">@dimen/button_height</item>
         <item name="android:textSize">14sp</item>
-        <item name="android:textColor">@color/white</item>
+        <item name="android:textColor">@color/blue_button_text_color</item>
         <item name="android:background">@drawable/primary_button</item>
         <item name="android:layout_centerHorizontal">true</item>
     </style>
