--- a/trunk/ddscanner/app/src/main/res/layout/fragment_user_profile.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/fragment_user_profile.xml
@@ -40,123 +40,200 @@
                     android:layout_height="wrap_content"
                     android:background="@color/white"
                     android:orientation="vertical">
-
-                    <RelativeLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="32dp"
-                        android:background="#f9f9f9"
-                        android:onClick="@{handlers::showDiveCenter}"
-                        android:visibility="@{userProfileViewModel.user.type == 1 ? View.GONE : View.VISIBLE}">
-
-                        <LinearLayout
-                            android:layout_width="wrap_content"
-                            android:layout_height="match_parent"
-                            android:layout_centerInParent="true"
-                            android:gravity="center"
-                            android:orientation="horizontal">
-
-                            <ImageView
-                                android:layout_width="22dp"
-                                android:layout_height="22dp"
-                                android:layout_marginRight="8dp"
-                                app:loadDiveCenterImageFrom="@{userProfileViewModel}" />
-
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:text="@{userProfileViewModel.user.diveCenter.name}"
-                                android:textColor="@color/black_text"
-                                android:textSize="13sp" />
-
-                        </LinearLayout>
-
-                        <ImageView
-                            android:layout_width="6dp"
-                            android:layout_height="10dp"
-                            android:layout_alignParentRight="true"
-                            android:layout_centerVertical="true"
-                            android:layout_marginRight="10dp"
-                            android:scaleType="center"
-                            android:src="@drawable/ic_arrow" />
-                    </RelativeLayout>
-
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:orientation="horizontal"
+                        android:layout_gravity="center_vertical"
                         android:paddingTop="15dp">
 
-                        <RelativeLayout
-                            android:layout_width="wrap_content"
-                            android:layout_height="85dp">
-
-                            <ImageView
-                                android:id="@+id/user_avatar"
-                                android:layout_width="80dp"
-                                android:layout_height="80dp"
-                                android:layout_marginLeft="20dp"
-                                android:layout_marginRight="20dp"
-                                android:src="@drawable/avatar_profile_default"
-                                app:loadImageFrom="@{userProfileViewModel}" />
-
-                            <LinearLayout
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_alignParentBottom="true"
-                                android:layout_centerHorizontal="true"
-                                android:background="@drawable/user_level_label"
-                                android:paddingBottom="1dp"
-                                android:paddingLeft="5dp"
-                                android:paddingRight="5dp"
-                                android:paddingTop="1dp"
-                                android:visibility="@{userProfileViewModel.user.diverLevel != null ? View.VISIBLE : View.GONE}">
-
-                                <TextView
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:textColor="@color/black_text"
-                                    android:textSize="11sp"
-                                    android:textStyle="bold"
-                                    app:diverLevelFrom="@{userProfileViewModel}" />
-                            </LinearLayout>
-                        </RelativeLayout>
-
+                        <ImageView
+                            android:id="@+id/user_avatar"
+                            android:layout_width="50dp"
+                            android:layout_height="50dp"
+                            android:layout_marginLeft="20dp"
+                            android:layout_marginRight="20dp"
+                            android:src="@drawable/avatar_profile_default"
+                            app:loadImageFrom="@{userProfileViewModel}" />
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:orientation="vertical"
                             android:paddingRight="20dp"
+                            android:gravity="center_vertical"
                             android:paddingTop="3dp">
 
                             <TextView
                                 android:id="@+id/user_name"
-                                android:layout_width="wrap_content"
+                                android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:layout_marginBottom="7dp"
-                                android:layout_marginTop="10dp"
-                                android:text="@{userProfileViewModel.user.name}"
+                                android:lines="1"
+                                android:ellipsize="end"
+                                android:fontFamily="sans-serif-medium"
+                                android:text="@{userProfileViewModel.user.name != null ? userProfileViewModel.user.name : null}"
                                 android:textColor="@color/black_text"
-                                android:textSize="18sp"
+                                android:textSize="16sp"
                                 android:visibility="@{userProfileViewModel.user.name != null ? View.VISIBLE : View.GONE}" />
-
                             <TextView
-                                android:id="@+id/user_about"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:gravity="center"
-                                android:text="@{userProfileViewModel.user.about}"
-                                android:textColor="#616161"
+                                android:textColor="#526cae"
                                 android:textSize="13sp"
-                                android:visibility="@{userProfileViewModel.user.about != null ? View.VISIBLE : View.GONE}" />
-
+                                app:diverLevelFrom="@{userProfileViewModel}" />
                         </LinearLayout>
                     </LinearLayout>
 
-                    <ImageView
-                        style="@style/DividerStyleFull"
-                        android:layout_marginTop="15dp" />
+                    <TextView
+                        android:paddingLeft="20dp"
+                        android:paddingRight="20dp"
+                        android:paddingTop="14dp"
+                        android:id="@+id/user_about"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="@{userProfileViewModel.user.about != null ? userProfileViewModel.user.about : null}"
+                        android:textColor="#616161"
+                        android:textSize="13sp"
+                        android:visibility="@{userProfileViewModel.user.about != null ? View.VISIBLE : View.GONE}" />
 
+                    <android.support.percent.PercentRelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="20dp">
+
+                        <LinearLayout
+                            android:id="@+id/comments_layout"
+                            android:layout_height="64dp"
+                            android:background="?attr/selectableItemBackground"
+                            android:gravity="center_vertical"
+                            android:onClick="@{handlers::showComments}"
+                            android:orientation="vertical"
+                            app:layout_widthPercent="25%">
+
+                            <TextView
+                                android:layout_marginLeft="0dp"
+                                android:id="@+id/user_comments"
+                                style="@style/ProfileNumberDivespotsSrtyle"
+                                android:text="@{String.valueOf(userProfileViewModel.user.counters.commentsCount)}" />
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:fontFamily="sans-serif-medium"
+                                android:text="@string/reviews_profile"
+                                android:textColor="#959595"
+                                android:textSize="12sp" />
+                        </LinearLayout>
+
+                        <LinearLayout
+                            android:id="@+id/likeLayout"
+                            android:layout_height="64dp"
+                            android:layout_toRightOf="@+id/comments_layout"
+                            android:background="?attr/selectableItemBackground"
+                            android:onClick="@{handlers::showLikes}"
+                            android:gravity="center_vertical"
+                            android:orientation="vertical"
+                            app:layout_widthPercent="25%">
+
+                            <TextView
+                                android:layout_marginLeft="0dp"
+                                android:id="@+id/user_likes"
+                                style="@style/ProfileNumberDivespotsSrtyle"
+                                android:text="@{String.valueOf(userProfileViewModel.user.counters.likesCount)}"
+                                />
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:fontFamily="sans-serif-medium"
+                                android:text="@string/likes_profile"
+                                android:textColor="#959595"
+                                android:textSize="12sp" />
+                        </LinearLayout>
+
+                        <LinearLayout
+                            android:id="@+id/dislikeLayout"
+                            android:layout_height="64dp"
+                            android:layout_toRightOf="@+id/likeLayout"
+                            android:background="?attr/selectableItemBackground"
+                            android:gravity="center_vertical"
+                            android:onClick="@{handlers::showDislikes}"
+                            android:orientation="vertical"
+                            app:layout_widthPercent="25%">
+
+                            <TextView
+                                android:layout_marginLeft="0dp"
+                                android:id="@+id/user_dislikes"
+                                style="@style/ProfileNumberDivespotsSrtyle"
+                                android:text="@{String.valueOf(userProfileViewModel.user.counters.dislikesCount)}"
+                                />
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:fontFamily="sans-serif-medium"
+                                android:text="@string/dislikes"
+                                android:textColor="#959595"
+                                android:textSize="12sp" />
+
+                        </LinearLayout>
+                    </android.support.percent.PercentRelativeLayout>
                 </LinearLayout>
+
+                <ImageView style="@style/DividerStyleFull" />
+
+                <RelativeLayout
+                    android:layout_marginTop="@dimen/base_block_margin_top"
+                    android:visibility="@{userProfileViewModel.user.type == 1 ? View.GONE : View.VISIBLE}"
+                    android:layout_width="match_parent"
+                    android:layout_height="60dp"
+                    android:background="@color/white"
+                    android:onClick="@{handlers::showDiveCenter}">
+
+                    <ImageView style="@style/DividerStyleFull" />
+
+                    <ImageView
+                        android:layout_alignParentBottom="true"
+                        style="@style/DividerStyleFull" />
+
+                    <LinearLayout
+                        android:layout_centerInParent="true"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:orientation="horizontal"
+                        android:gravity="center_vertical"
+                        android:paddingLeft="20dp">
+
+                        <ImageView
+                            app:loadDiveCenterImageFrom="@{userProfileViewModel}"
+                            android:layout_width="36dp"
+                            android:layout_height="36dp" />
+                        <LinearLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:orientation="vertical"
+                            android:layout_marginLeft="14dp">
+                            <TextView
+                                android:text="@{userProfileViewModel.user.diveCenter.name}"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:textSize="16sp"
+                                android:textColor="@color/black_text"/>
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:textColor="@color/gray"
+                                android:textSize="12sp"
+                                android:text="@string/profile_dive_center"/>
+                        </LinearLayout>
+                    </LinearLayout>
+                    <ImageView
+                        android:layout_centerVertical="true"
+                        android:layout_alignParentRight="true"
+                        android:layout_marginRight="20dp"
+                        android:layout_width="6dp"
+                        android:layout_height="10dp"
+                        android:src="@drawable/ic_arrow"
+                        android:scaleType="center"/>
+                </RelativeLayout>
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -182,8 +259,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:paddingBottom="12dp"
-                        android:paddingLeft="20dp"
-                        android:paddingRight="20dp"
+                        android:paddingLeft="15dp"
+                        android:paddingRight="15dp"
                         android:paddingTop="12dp"
                         android:visibility="visible" />
 
@@ -269,7 +346,6 @@
                             android:src="@drawable/ic_arrow" />
                     </LinearLayout>
 
-                    <ImageView style="@style/DividerStyle" />
 
                     <LinearLayout
                         android:id="@+id/checkins_activity"
@@ -309,7 +385,6 @@
                             android:src="@drawable/ic_arrow" />
                     </LinearLayout>
 
-                    <ImageView style="@style/DividerStyle" />
 
                     <LinearLayout
                         android:id="@+id/created_activity"
@@ -349,7 +424,6 @@
                             android:src="@drawable/ic_arrow" />
                     </LinearLayout>
 
-                    <ImageView style="@style/DividerStyle" />
 
                     <LinearLayout
                         android:id="@+id/edited_activity"
@@ -390,6 +464,25 @@
                     </LinearLayout>
 
                     <ImageView style="@style/DividerStyle" />
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
+                        <ImageView
+                            style="@style/CharacteristicsDiveSpotListIcons"
+                            android:layout_height="66dp"
+                            android:src="@drawable/ic_profile_open" />
+
+                        <TextView
+                            android:layout_height="match_parent"
+                            android:gravity="center_vertical"
+                            android:fontFamily="sans-serif-medium"
+                            style="@style/CharacteristicsDiveSpotListTitle"
+                            android:text="@string/open_on_facebook_profile" />
+
+
+                    </LinearLayout>
 
                 </LinearLayout>
 
