--- a/trunk/ddscanner/app/src/main/res/layout/item_achievment_profile.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/item_achievment_profile.xml
@@ -3,30 +3,39 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="@color/white"
-    android:gravity="center_vertical">
+    android:layout_height="56dp"
+    android:background="@drawable/achievemnt_item_profile_background"
+    android:gravity="center_vertical"
+    android:layout_margin="5dp">
     <TextView
-        android:layout_centerVertical="true"
         android:id="@+id/title"
+        android:layout_marginLeft="13dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="@color/black_text"
+        android:textSize="12sp"
+        android:lines="1"
+        android:ellipsize="end"
         tools:text="Diver"/>
+    <LinearLayout
+        android:layout_marginLeft="8dp"
+        android:layout_below="@+id/title"
+        android:layout_width="wrap_content"
+        android:gravity="center_vertical"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
     <TextView
         android:visibility="gone"
         android:id="@+id/more_count"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:layout_toLeftOf="@+id/countries"
         android:textSize="14sp"
         android:fontFamily="sans-serif-medium"
         android:textColor="#a3a3a3" />
     <LinearLayout
         android:id="@+id/countries"
-        android:layout_alignParentRight="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"/>
+    </LinearLayout>
 </RelativeLayout>
