--- a/trunk/ddscanner/app/src/main/res/values/styles.xml
+++ b/trunk/ddscanner/app/src/main/res/values/styles.xml
@@ -160,9 +160,9 @@
     <style name="ProfileNumberDivespotsSrtyle">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:textSize">15sp</item>
+        <item name="android:textSize">16sp</item>
         <item name="android:fontFamily">sans-serif-medium</item>
-        <item name="android:textColor">#616161</item>
+        <item name="android:textColor">@color/black_text</item>
         <item name="android:layout_marginLeft">4dp</item>
     </style>
 
