--- a/trunk/ddscanner/app/src/main/res/layout/item_achievment_profile.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/item_achievment_profile.xml
@@ -1,41 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="56dp"
+    android:layout_margin="5dp"
     android:background="@drawable/achievemnt_item_profile_background"
     android:gravity="center_vertical"
-    android:layout_margin="5dp">
+    android:orientation="vertical">
+
     <TextView
         android:id="@+id/title"
-        android:layout_marginLeft="13dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="13dp"
+        android:ellipsize="end"
+        android:lines="1"
         android:textColor="@color/black_text"
         android:textSize="12sp"
-        android:lines="1"
-        android:ellipsize="end"
-        tools:text="Diver"/>
+        tools:text="Diver" />
+
     <LinearLayout
-        android:layout_marginLeft="8dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_below="@+id/title"
-        android:layout_width="wrap_content"
+        android:layout_marginLeft="8dp"
         android:gravity="center_vertical"
-        android:layout_height="wrap_content"
         android:orientation="horizontal">
-    <TextView
-        android:visibility="gone"
-        android:id="@+id/more_count"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="14sp"
-        android:fontFamily="sans-serif-medium"
-        android:textColor="#a3a3a3" />
-    <LinearLayout
-        android:id="@+id/countries"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"/>
+
+        <LinearLayout
+            android:id="@+id/countries"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal" />
+
+        <TextView
+            android:id="@+id/more_count"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="sans-serif-medium"
+            android:textColor="#a3a3a3"
+            android:textSize="14sp"
+            android:visibility="gone" />
     </LinearLayout>
 </RelativeLayout>
