--- a/trunk/ddscanner/app/src/main/res/layout/view_diver_sign_up.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/view_diver_sign_up.xml
@@ -103,7 +103,7 @@
                 android:id="@+id/fb_custom"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/button_height"
-                android:background="@drawable/fb_login_btn_background"
+                style="@style/FacebookLoginButtonBackground"
                 android:gravity="center"
                 android:orientation="horizontal">
 
@@ -128,7 +128,7 @@
                 android:layout_height="@dimen/button_height"
                 android:layout_below="@+id/fb_custom"
                 android:layout_marginTop="8dp"
-                android:background="@drawable/google_login_button"
+                style="@style/GoogleLoginButtonBackground"
                 android:gravity="center"
                 android:orientation="horizontal">
 
