--- a/trunk/ddscanner/app/src/main/res/xml/file_paths.xml
+++ b/trunk/ddscanner/app/src/main/res/xml/file_paths.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <paths>
-    <external-path name="dds_images" path="Android/data/com.ddscanner.debug/files/Pictures" />
+    <external-path name="dds_images" path="Android/data/com.ddscanner/files/Pictures" />
 </paths>
