--- a/trunk/ddscanner/app/src/main/res/layout/fragment_profile.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/fragment_profile.xml
@@ -216,12 +216,12 @@
                             <ImageView
                                 app:loadDiveCenterImageFrom="@{profileFragmentViewModel}"
                                 android:layout_width="36dp"
-                                android:layout_height="36dp" />
+                                android:layout_height="36dp"
+                                android:layout_marginRight="14dp"/>
                             <LinearLayout
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:orientation="vertical"
-                                android:layout_marginLeft="14dp">
+                                android:orientation="vertical" >
                             <TextView
                                 android:text="@{profileFragmentViewModel.user.diveCenter.name}"
                                 android:layout_width="wrap_content"
