--- a/trunk/ddscanner/app/src/main/res/layout/view_divecenter_profile.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/view_divecenter_profile.xml
@@ -237,7 +237,7 @@
                             android:layout_height="wrap_content"
                             android:layout_alignParentRight="true"
                             android:layout_centerVertical="true"
-                            android:layout_marginRight="15dp"
+                            android:layout_marginRight="20dp"
                             android:src="@drawable/ic_arrow" />
                     </RelativeLayout>
                 </LinearLayout>
@@ -278,7 +278,7 @@
                             android:layout_height="wrap_content"
                             android:layout_alignParentRight="true"
                             android:layout_centerVertical="true"
-                            android:layout_marginRight="15dp"
+                            android:layout_marginRight="20dp"
                             android:src="@drawable/ic_arrow" />
                     </RelativeLayout>
                 </LinearLayout>
@@ -364,7 +364,7 @@
                             android:layout_height="wrap_content"
                             android:layout_alignParentRight="true"
                             android:layout_centerVertical="true"
-                            android:layout_marginRight="15dp"
+                            android:layout_marginRight="20dp"
                             android:src="@drawable/ic_arrow" />
                     </RelativeLayout>
                 </LinearLayout>
@@ -405,7 +405,7 @@
                             android:layout_height="wrap_content"
                             android:layout_alignParentRight="true"
                             android:layout_centerVertical="true"
-                            android:layout_marginRight="15dp"
+                            android:layout_marginRight="20dp"
                             android:src="@drawable/ic_arrow" />
                     </RelativeLayout>
                 </LinearLayout>
@@ -437,6 +437,7 @@
 
                 <ImageView
                     android:id="@+id/ic_edit"
+                    android:layout_marginTop="0dp"
                     style="@style/DiveCenterProfileCharacteristicIcon"
                     android:src="@drawable/ic_profile_edit" />
 
