--- a/trunk/ddscanner/app/src/main/res/layout/fragment_user_profile.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/fragment_user_profile.xml
@@ -45,7 +45,8 @@
                         android:layout_height="wrap_content"
                         android:orientation="horizontal"
                         android:layout_gravity="center_vertical"
-                        android:paddingTop="15dp">
+                        android:paddingTop="15dp"
+                        android:paddingBottom="15dp">
 
                         <ImageView
                             android:id="@+id/user_avatar"
@@ -87,7 +88,6 @@
                         android:paddingLeft="20dp"
                         android:paddingRight="20dp"
                         android:paddingTop="14dp"
-                        android:paddingBottom="14dp"
                         android:id="@+id/user_about"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
