--- a/trunk/ddscanner/app/src/main/res/layout/fragment_user_profile.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/fragment_user_profile.xml
@@ -39,14 +39,14 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@color/white"
-                    android:orientation="vertical">
+                    android:orientation="vertical"
+                    android:paddingBottom="15dp">
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:orientation="horizontal"
                         android:layout_gravity="center_vertical"
-                        android:paddingTop="15dp"
-                        android:paddingBottom="15dp">
+                        android:paddingTop="15dp">
 
                         <ImageView
                             android:id="@+id/user_avatar"
