--- a/trunk/ddscanner/app/src/main/res/layout/view_divecenter_profile.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/view_divecenter_profile.xml
@@ -425,32 +425,67 @@
 
             <ImageView style="@style/DividerStyleFull" />
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:background="@color/white"
+                android:layout_marginTop="10dp">
+
             <ImageView
-                style="@style/DividerStyleFull"
-                android:layout_marginBottom="@dimen/base_block_margin_top" />
+                style="@style/DividerStyleFull" />
 
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:background="@color/white"
+                android:layout_height="55dp"
+                android:background="?attr/selectableItemBackground"
                 android:onClick="@{handlers::editProfileButtonClicked}">
 
                 <ImageView
                     android:id="@+id/ic_edit"
                     android:layout_marginTop="0dp"
-                    style="@style/DiveCenterProfileCharacteristicIcon"
+                    style="@style/CharacteristicsDiveSpotListIcons"
                     android:src="@drawable/ic_profile_edit" />
 
                 <TextView
-                    style="@style/DiveCenterProfileCharacteristicName"
+                    style="@style/CharacteristicsDiveSpotListTitle"
+                    android:layout_height="match_parent"
+                    android:fontFamily="sans-serif-medium"
+                    android:gravity="center_vertical"
                     android:layout_centerVertical="true"
                     android:layout_toRightOf="@id/ic_edit"
                     android:text="@string/edit_profile" />
             </RelativeLayout>
 
             <ImageView
-                style="@style/DividerStyleFull"
-                android:layout_marginBottom="@dimen/base_block_margin_top" />
+                style="@style/DividerStyleFull" />
+
+            <RelativeLayout
+                android:background="?attr/selectableItemBackground"
+                android:id="@+id/logout"
+                android:layout_width="match_parent"
+                android:layout_height="55dp"
+                android:onClick="@{handlers::logout}">
+
+                <ImageView
+                    android:id="@+id/logout_icon"
+                    android:layout_marginTop="0dp"
+                    style="@style/CharacteristicsDiveSpotListIcons"
+                    android:src="@drawable/ic_profile_logout" />
+
+                <TextView
+                    android:layout_toRightOf="@+id/logout_icon"
+                    style="@style/CharacteristicsDiveSpotListTitle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:fontFamily="sans-serif-medium"
+                    android:gravity="center_vertical"
+                    android:text="@string/log_out" />
+                <ImageView
+                    android:layout_alignParentBottom="true"
+                    style="@style/DividerStyle" />
+            </RelativeLayout>
+            </LinearLayout>
 
         </LinearLayout>
         </LinearLayout>
