--- a/trunk/ddscanner/app/src/main/res/layout/dialog_achievement_popup.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/dialog_achievement_popup.xml
@@ -2,7 +2,11 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
-
+    <data>
+        <variable
+            name="viewModel"
+            type="com.ddscanner.screens.dialogs.popup.AchievementPopupDialogViewModel" />
+    </data>
     <LinearLayout
         android:layout_width="320dp"
         android:layout_height="wrap_content"
@@ -12,7 +16,9 @@
         <ImageView
             android:id="@+id/image"
             android:layout_width="match_parent"
-            android:layout_height="230dp" />
+            android:layout_height="230dp"
+            android:scaleType="centerCrop"
+            app:loadImageFrom="@{viewModel}"/>
 
         <TextView
             android:id="@+id/title"
@@ -24,10 +30,10 @@
             android:textSize="20sp"
             android:textColor="@color/black_text"
             android:fontFamily="sans-serif-medium"
-            android:text="Perfect shots!"
+            android:text="@{viewModel.popup.title}"
             android:gravity="center"/>
 
-        <TextView
+        <com.klinker.android.link_builder.LinkConsumableTextView
             android:gravity="center"
             android:id="@+id/text"
             android:layout_marginTop="14dp"
@@ -37,13 +43,15 @@
             android:paddingRight="35dp"
             android:textSize="15sp"
             android:textColor="#717171"
-            android:text="You are proved to be Professional Photographer of Thailand. Share your shots of other countries to become famous around the world"/>
+            android:layout_marginBottom="10dp"
+            app:setTextFrom="@{viewModel}"/>
 
         <TextView
+            android:id="@+id/button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="35dp"
-            android:text="CONTINUE"
+            android:padding="25dp"
+            android:text="@string/ok_i_got_it"
             android:gravity="center"
             android:textSize="15sp"
             android:textStyle="bold"
